# rpi-monitor-agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.json.template  main.cpp  metrics.db
include/collector/: CpuCollector.hpp  DiskCollector.hpp  MemoryCollector.hpp  WebCollector.hpp
include/core/: ConfigManager.hpp  DatabaseManager.hpp
include/notifier/: DiscordBotNotifier.hpp
src/: main.cpp
src/collector/: CpuCollector.cpp  DiskCollector.cpp  MemoryCollector.cpp  WebCollector.cpp
src/core/: ConfigManager.cpp  DatabaseManager.cpp
src/notifier/: DiscordBotNotifier.cpp
web/backend/: main.py
